--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,114 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Manrope:wght@800&display=swap");
+
+:root {
+  /* --light-cyan: #cee3e942; */
+  --light-cyan: hsl(193, 38%, 86%);
+  --neon-green: hsl(150, 100%, 66%);
+  /* --neon-green: hsla(150, 100%, 66%, 0.532); */
+  --grayish-blue: hsl(217, 19%, 38%);
+  --dark-grayish-blue: hsl(217, 19%, 24%);
+  --dark-blue: hsl(218, 23%, 16%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  margin: 0;
+  font-family: "Manrope", sans-serif;
+  color: var(--light-cyan);
+  font-size: 28px;
+  background-color: var(--dark-grayish-blue);
+  text-align: center;
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+section {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  background-color: var(--grayish-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  padding: 1.5em;
+  max-width: 450px;
+}
+
+h1 {
+  font-family: "DM Sans", sans-serif;
+  color: var(--neon-green);
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 13px;
+  margin: 0;
+}
+
+figure {
+  margin: 0;
+}
+
+button {
+  background-color: var(--neon-green);
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.25em;
+  margin-top: 2.5em;
+  margin-bottom: -5em;
+  /* transition: 0.5s ease-in-out; */
+}
+
+button:hover {
+  box-shadow: 0px 0px 20px 10px hsla(150, 100%, 66%, 0.5);
+}
+
+button:active {
+  /* rotate: 360deg;
+  transition: rotate 1s; */
+  -webkit-animation: rotate-center 0.6s ease-in-out both;
+  animation: rotate-center 0.6s ease-in-out both;
+}
+
+@-webkit-keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+footer {
+  flex-shrink: 0;
 }
 
 .attribution {
