--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Manrope:wght@800&display=swap");
-
-:root {
-  --light-cyan: hsl(193, 38%, 86%);
-  --neon-green: hsl(150, 100%, 66%);
-  --grayish-blue: hsl(217, 19%, 38%);
-  --dark-grayish-blue: hsl(217, 19%, 24%);
-  --dark-blue: hsl(218, 23%, 16%);
-}
-
 html {
   height: 100%;
 }
@@ -15,29 +6,20 @@ html {
 body {
   height: 100%;
   margin: 0;
-  font-family: "Manrope", sans-serif;
-  color: var(--light-cyan);
+  font: 100% "Manrope", sans-serif;
+  color: hsl(193, 38%, 86%);
   font-size: 28px;
-  background-color: var(--dark-grayish-blue);
+  background-color: hsl(217, 19%, 24%);
   text-align: center;
 }
-
-#root {
+body #root {
   min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: stretch;
 }
-
-section {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-main {
-  background-color: var(--grayish-blue);
+body #root main {
+  background-color: hsl(217, 19%, 38%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,22 +27,25 @@ main {
   padding: 1.5em;
   max-width: 450px;
 }
-
-h1 {
+body #root section {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body #root section h1 {
   font-family: "DM Sans", sans-serif;
-  color: var(--neon-green);
+  color: hsl(150, 100%, 66%);
   text-transform: uppercase;
   letter-spacing: 3px;
   font-size: 13px;
   margin: 0;
 }
-
-figure {
+body #root section figure {
   margin: 0;
 }
-
-button {
-  background-color: var(--neon-green);
+body #root section button {
+  background-color: hsl(150, 100%, 66%);
   border-radius: 50%;
   cursor: pointer;
   border: none;
@@ -71,15 +56,12 @@ button {
   margin-top: 2.5em;
   margin-bottom: -5em;
 }
-
-button:active {
+body #root section button:active, body #root section button:hover {
   box-shadow: 0px 0px 20px 10px hsla(150, 100%, 66%, 0.5);
 }
-
-.spin {
+body #root section button.spin {
   animation: spin 1s linear;
 }
-
 @keyframes spin {
   from {
     transform: rotate(0deg);
@@ -88,25 +70,21 @@ button:active {
     transform: rotate(360deg);
   }
 }
-
-footer {
+body #root footer {
   flex-shrink: 0;
 }
-
-.attribution {
+body #root footer .attribution {
   font-family: "DM Sans", sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 11px;
   text-align: center;
 }
-
-.attribution a {
-  color: var(--neon-green);
+body #root footer .attribution a {
+  color: hsl(150, 100%, 66%);
   text-decoration: none;
 }
-
-.attribution a:hover {
+body #root footer .attribution a:hover {
   color: hsla(150, 100%, 66%, 0.5);
 }
 
@@ -117,8 +95,9 @@ footer {
     padding: 1em;
     margin: 0;
   }
-
   footer {
     display: none;
   }
 }
+
+/*# sourceMappingURL=index.css.map */
